--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
-numpy==2.2.4
+numpy<2
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -105,7 +105,7 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-tensorflow
+tensorflow==2.10
 json
 transformers
 catboost
